--- a/todolist/src/main/resources/hikary.properties
+++ b/todolist/src/main/resources/hikary.properties
@@ -1,4 +1,4 @@
-jdbcUrl=jdbc:mysql://localhost:3306/tododb
+jdbcUrl=jdbc\:mysql\://localhost\:3306/tododb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 username=root
 password=root
 dataSource.cachePrepStmts=true
